# ClubManager

./: README  README.md  manage.py  package.json  pyproject.toml  tailwind.config.js
ClubManager/: asgi.py  configuration.py  forms.py  settings.py  signals.py  urls.py  views.py  wsgi.py
ClubManager/clubmanager_urls/: backend.py  frontend.py
ClubManager/templatetags/: avatar.py  form_field.py  pagination_tags.py
ClubManager/urls/: backend.py
members/: filters.py  forms.py  models.py  tests.py
members/backend/: urls.py  views.py
members/migrations/: 0001_initial.py  0002_member_family_members_member_notes.py  0003_member_birthday_member_created_and_more.py  0004_member_password_change_required.py
members/templates/: index.html
static/src/: input.css  output.css
static/stc/: output.css
teams/: admin.py  filters.py  forms.py  models.py  rules.py
teams/backend/: __init__.py  urls.py  views.py
teams/migrations/: 0001_initial.py  0002_create_default_season.py  0003_teamrole.py  0004_alter_teamrole_sort_order.py  0005_numberpool.py  0006_create_default_numberpool.py  0007_alter_numberpool_name.py  0008_alter_numberpool_enforce_unique_numbers.py  0009_team_teammembership_team_members.py
teams/templates/teams/: season_list.html  (+9 more)
templates/clubmanager/: _base.html  _menu_backend.html  _menu_frontend.html
templates/configuration/: index.html
templates/registration/: _base.html  logged_out.html  password_change_done.html  password_change_form.html
templates/templatetags/: avatar.html  field.html
templates/two_factor/: _base.html  _wizard_forms.html
(+4 files in other folders)
